--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -524,6 +524,18 @@ margin: 0px 10px 0px 10px;
 }
 
 /* Home Page Style Adjustments */
+#content .greeting {
+	margin-top: 10%;
+}
+
+#content .greeting h2 {
+	font-size: @baseFontSize + 15;
+}
+
+#content .greeting p {
+	font-size: @baseFontSize + 1;
+}
+
 section#buckets {
 	text-align: left;
 }
