--- a/assets/less/values.less
+++ b/assets/less/values.less
@@ -68,7 +68,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #f79737;
+@linkColor:             #1b7ad6;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
@@ -106,7 +106,7 @@
 @btnBorder:                         #bbb;
 
 @btnPrimaryBackground:              @linkColor;
-@btnPrimaryBackgroundHighlight:     darken(@btnPrimaryBackground, 15);
+@btnPrimaryBackgroundHighlight:     darken(@btnPrimaryBackground, 12%);
 
 @btnInfoBackground:                 #5bc0de;
 @btnInfoBackgroundHighlight:        #2f96b4;
