--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2401,6 +2401,15 @@ a.backtotop:hover {
     padding: 20px 30px;
   }
   /* Home Page Style Adjustments */
+  #content .greeting {
+    margin-top: 10%;
+  }
+  #content .greeting h2 {
+    font-size: 30px;
+  }
+  #content .greeting p {
+    font-size: 16px;
+  }
   section#buckets {
     text-align: left;
   }
