--- a/assets/less/buttons-base.less
+++ b/assets/less/buttons-base.less
@@ -10,7 +10,7 @@
 .btn {
   display: inline-block;
   .ie7-inline-block();
-  padding: 4px 14px;
+  padding: 4px 20px;
   margin-bottom: 0; // For input.btn
   font-size: @baseFontSize;
   line-height: @baseLineHeight;
@@ -24,8 +24,7 @@
   border-bottom-color: darken(@btnBorder, 10%);
   .border-radius(20px);
   .ie7-restore-left-whitespace(); // Give IE7 some love
-  .box-shadow(inset 0 1px 0 rgba(255,255,255,.5), 0 1px 2px 0px rgba(0,0,0,.03));
-  //.transition(all .4s linear);
+  .box-shadow(inset 0 1px 0 0 rgba(255,255,255,.2), 0 1px 2px 0 rgba(0,0,0,.05));
 
   // Hover state
   &:hover {
@@ -37,7 +36,7 @@
 
     // transition is only when going to hover, otherwise the background
     // behind the gradient (there for IE<=9 fallback) gets mismatched
-    .transition(background-position .1s linear);
+    //.transition(background-position 200ms linear);
   }
 
   // Focus state for keyboard and accessibility
@@ -52,7 +51,7 @@
     background-color: darken(@white, 15%) e("\9");
     background-image: none;
     outline: 0;
-    .box-shadow(inset 0 2px 4px rgba(0,0,0,.4), 0 1px 2px rgba(0,0,0,.05));
+    .box-shadow(inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05));
   }
 
   // Disabled state
@@ -67,39 +66,167 @@
 
 }
 
+
+
 // Button Sizes
 // --------------------------------------------------
 
 // Large
-.btn-cta {
-	padding: 9px 14px;
-	font-size: @baseFontSize + 1;
-	font-weight: 400;
-	letter-spacing: .1em;
-	line-height: normal;
-	text-transform: uppercase;
-	.border-radius(20px);
-	.buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight, @textColor:@white, @textShadow: 0 1px 1px rgba(0,0,0,.30));
-	.transition(background-color .4s linear);
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
-	&:active, &.active, &:focus {
-		text-shadow: 0 -1px 1px rgba(0,0,0,.50); 
-	}
+.btn-large {
+  padding: 9px 22px;
+  font-size: @baseFontSize + 2px;
+  line-height: normal;
+  .border-radius(20px);
+  .box-shadow(inset 0 1px 0 0 rgba(255,255,255,.3), 0 2px 2px 0 rgba(0,0,0,.3));
+}
+.btn-large [class^="icon-"] {
+  margin-top: 2px;
 }
 
-// Button Block
-// --------------------------------------------------
+// Small
+.btn-small {
+  padding: 3px 9px;
+  font-size: @baseFontSize - 2px;
+  line-height: @baseLineHeight - 2px;
+}
+.btn-small [class^="icon-"] {
+  margin-top: 0;
+}
+
+// Mini
+.btn-mini {
+  padding: 2px 6px;
+  font-size: @baseFontSize - 3px;
+  line-height: @baseLineHeight - 3px;
+}
+
+
+// Block button
+// -------------------------
+
 .btn-block {
-	padding-left: 0;
-	padding-right: 0;
-	width: 100%;
-	display: block;
+  display: block;
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+  .box-sizing(border-box);
 }
 
-.btn-block-fluid {
-	padding-left: 0;
-	padding-right: 0;
-	width: 80%;
-	display: inline-block;
-	float: right;
+// Vertically space out multiple block buttons
+.btn-block + .btn-block {
+  margin-top: 5px;
+}
+
+// Specificity overrides
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  &.btn-block {
+    width: 100%;
+  }
+}
+
+
+
+// Alternate buttons
+// --------------------------------------------------
+
+// Provide *some* extra contrast for those who can get it
+.btn-primary.active,
+.btn-warning.active,
+.btn-danger.active,
+.btn-success.active,
+.btn-info.active,
+.btn-inverse.active {
+  color: rgba(255,255,255,.75);
+}
+
+// Set the backgrounds
+// -------------------------
+.btn {
+  // reset here as of 2.0.3 due to Recess property order
+  border-color: #c5c5c5;
+  border-color: rgba(0,0,0,.15) rgba(0,0,0,.15) rgba(0,0,0,.25);
+}
+.btn-primary {
+  .buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight);
+}
+// Warning appears are orange
+.btn-warning {
+  .buttonBackground(@btnWarningBackground, @btnWarningBackgroundHighlight);
+}
+// Danger and error appear as red
+.btn-danger {
+  .buttonBackground(@btnDangerBackground, @btnDangerBackgroundHighlight);
+}
+// Success appears as green
+.btn-success {
+  .buttonBackground(@btnSuccessBackground, @btnSuccessBackgroundHighlight);
+}
+// Info appears as a neutral blue
+.btn-info {
+  .buttonBackground(@btnInfoBackground, @btnInfoBackgroundHighlight);
+}
+// Inverse appears as dark gray
+.btn-inverse {
+  .buttonBackground(@btnInverseBackground, @btnInverseBackgroundHighlight);
+}
+
+
+// Cross-browser Jank
+// --------------------------------------------------
+
+button.btn,
+input[type="submit"].btn {
+
+  // Firefox 3.6 only I believe
+  &::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+  }
+
+  // IE7 has some default padding on button controls
+  *padding-top: 3px;
+  *padding-bottom: 3px;
+
+  &.btn-large {
+    *padding-top: 7px;
+    *padding-bottom: 7px;
+  }
+  &.btn-small {
+    *padding-top: 3px;
+    *padding-bottom: 3px;
+  }
+  &.btn-mini {
+    *padding-top: 1px;
+    *padding-bottom: 1px;
+  }
+}
+
+
+// Link buttons
+// --------------------------------------------------
+
+// Make a button look and behave like a link
+.btn-link,
+.btn-link:active,
+.btn-link[disabled] {
+  background-color: transparent;
+  background-image: none;
+  .box-shadow(none);
+}
+.btn-link {
+  border-color: transparent;
+  cursor: pointer;
+  color: @linkColor;
+  .border-radius(0);
+}
+.btn-link:hover {
+  color: @linkColorHover;
+  text-decoration: underline;
+  background-color: transparent;
+}
+.btn-link[disabled]:hover {
+  color: @grayDark;
+  text-decoration: none;
 }
