--- a/assets/less/keyframes.less
+++ b/assets/less/keyframes.less
@@ -53,15 +53,21 @@
 
 /* Home Page */
 
-#cover {
+#content {
     .animation-duration(1s);
     .animation-delay(1s);
     .animation-iteration-count(none);
 }
 
+#cover {
+    .animation-duration(1s);
+    .animation-delay(2s);
+    .animation-iteration-count(none);
+}
+
 #bonjour {
     .animation-duration(1s);
-    .animation-delay(1s);
+    .animation-delay(2s);
     .animation-iteration-count(none);
 }
 
