--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -36,7 +36,7 @@
 // Components: Buttons & Alerts
 //@import "buttons.less";
 @import "buttons-base.less";
-//@import "button-groups.less";
+@import "button-groups.less";
 //@import "alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
 
 // Components: Nav
