--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -857,28 +857,15 @@ a.btn-cta {
     backface-visibility: hidden;
   }
   section#buckets {
-    text-align: left;
     margin-bottom: 0px;
+    padding-top: 0px;
   }
   section#buckets ul.thumbnails li:last-child {
     margin-bottom: 0;
   }
-  /*
   section#pong {
-  	display: none;
-  }
-  */
-  section#pong h3 {
-    font-size: 18px;
-    padding-left: 10px;
-    padding-right: 10px;
     text-align: center;
-  }
-  section#pong p {
-    font-size: 15px;
-    line-height: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 0px;
   }
   a.bucket {
     -webkit-transition: all 0.2s linear;
