--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -275,30 +275,31 @@ ul.headshots li img {
 }
 
 section#buckets {
-	text-align: left;
 	margin-bottom: 0px;
+	padding-top: 0px;
 }
 section#buckets ul.thumbnails li:last-child {
 	margin-bottom: 0;
 }
 
-/*
 section#pong {
-	display: none;
-}
-*/
-section#pong h3 {
-	font-size: @baseFontSize + 3;
-	padding-left: 10px;
-	padding-right: 10px;
+	//display: none;
 	text-align: center;
+	padding-top: 0px;
+}
+
+section#pong h3 {
+	//font-size: @baseFontSize + 3;
+	//padding-left: 10px;
+	//padding-right: 10px;
+	//text-align: center;
 }
 
 section#pong p {
-	font-size: @baseFontSize;
-	line-height: @baseLineHeight;
-	padding-left: 10px;
-	padding-right: 10px;
+	//font-size: @baseFontSize;
+	//line-height: @baseLineHeight;
+	//padding-left: 10px;
+	//padding-right: 10px;
 }
 a.bucket {
 	//background-color: @printerBlacker;
