--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -50,7 +50,7 @@ header {
 	//border-top: 1px solid @grayDark;
 	margin: 0 auto;
 	z-index: inherit;
-	//background: url(@bgCanvas1x) repeat;
+	background-color: @white;
 }
 
 .wrapper {
@@ -686,7 +686,9 @@ section#pong {
 	padding-bottom: 30px;
 	margin-bottom: 30px;
 	//padding-left: 20px;
-	background: @bodyBackground;
+	background: @offWhite;
+	border-top: 1px solid @paleWhite;
+	border-bottom: 1px solid @paleWhite;
 }
 
 section#pong h3 {
@@ -714,7 +716,7 @@ section#buckets {
 	text-align: center;
 	color: @accentColor;
 	width: 100%;
-	padding-top: 30px;
+	//padding-top: 30px;
 }
 
 section#buckets img.thumbnail {
