--- a/assets/less/values.less
+++ b/assets/less/values.less
@@ -51,6 +51,7 @@
 // -------------------------
 @primaryColor:			#4a4f55;
 @accentColor:			#1b7ad6;
+@paleWhite:				#e7e7e7;
 @offWhite:				#f5f5f5;
 @dirtyWhite:			#9a9795;
 @bucketColor:			@bodyBackground;
