--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,6 +153,7 @@ header {
   padding-left: 20px;
   margin: 0 auto;
   z-index: inherit;
+  background-color: #ffffff;
 }
 .wrapper {
   min-height: 100%;
@@ -750,7 +751,9 @@ section#pong {
   padding-top: 60px;
   padding-bottom: 30px;
   margin-bottom: 30px;
-  background: #ffffff;
+  background: #f5f5f5;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
 }
 section#pong h3 {
   font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -771,7 +774,6 @@ section#buckets {
   text-align: center;
   color: #1b7ad6;
   width: 100%;
-  padding-top: 30px;
 }
 section#buckets img.thumbnail {
   box-shadow: none;
@@ -1865,25 +1867,6 @@ p.contactlead {
   }
   #content .greeting p {
     font-size: 16px;
-  }
-  section#buckets {
-    text-align: left;
-  }
-  #buckets h3 {
-    font-size: 15px;
-    padding: 20px 0px 25px 5px;
-  }
-  #buckets h3::before {
-    top: 30px;
-  }
-  #buckets p {
-    font-size: 14px;
-    padding: 10px 0px 0px 0px;
-    text-align: center;
-  }
-  a.bucket::after {
-    top: 28%;
-    right: 12px;
   }
   /* Contact Icons */
   ul.contact {
