--- a/assets/less/buttons-base.less
+++ b/assets/less/buttons-base.less
@@ -25,6 +25,7 @@
   .border-radius(20px);
   .ie7-restore-left-whitespace(); // Give IE7 some love
   .box-shadow(inset 0 1px 0 0 rgba(255,255,255,.2), 0 1px 2px 0 rgba(0,0,0,.05));
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 
   // Hover state
   &:hover {
