--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,10 @@ header a.brand {
   text-transform: uppercase;
   text-align: left;
   color: #9a9795;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 header a.brand:hover,
 header a.brand:focus {
@@ -665,17 +669,14 @@ img.so-skype {
   font-size: 15px;
   font-weight: 400;
   line-height: 20px;
-  background: #303030;
-  border: 1px solid #313131;
   padding: 20px;
-  margin-bottom: 20px;
   position: relative;
 }
-/*
 section#intro {
-	.box-shadow(inset 0px 1px 4px 0px rgba(0,0,0,.2));
+  background: #303030;
+  border: 1px solid #313131;
+  margin-bottom: 10px;
 }
-*/
 section#intro .greeting {
   text-align: center;
 }
@@ -774,6 +775,7 @@ section#buckets {
   text-align: center;
   color: #1b7ad6;
   width: 100%;
+  margin-bottom: 10px;
 }
 section#buckets img.thumbnail {
   box-shadow: none;
@@ -847,7 +849,7 @@ ul.headshots li img {
   padding: 20px 30px;
   height: auto;
   margin-bottom: 20px;
-  margin-top: 0;
+  margin-top: 40px;
   line-height: 15px;
   color: #000000;
   background: #ffffff;
@@ -1308,6 +1310,14 @@ p.contactlead {
   text-shadow: none;
   background-color: transparent;
   border: 0;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  transition: all 200ms linear;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .contacticons a:hover,
 .contacticons a:focus,
@@ -1317,6 +1327,7 @@ p.contactlead {
   text-shadow: none;
   background-color: transparent;
   border: 0;
+  background-color: #1a1a1a;
 }
 #fm-facebook {
   background-position: 0 -144px;
