--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -50,7 +50,7 @@ header {
 	//border-top: 1px solid @grayDark;
 	margin: 0 auto;
 	z-index: inherit;
-	background-color: @white;
+	background-color: @bodyBackground;
 }
 
 .wrapper {
@@ -118,6 +118,7 @@ header a.brand {
 	text-transform: uppercase;
 	text-align: left;
 	color: @navbarBrandColor;
+	.backface-visibility(hidden);
 	//text-shadow: 0 1px @grayDark;
 	&:hover, &:focus {
 		color: @navbarBrandColorHover;
@@ -594,19 +595,18 @@ img.so-skype {
 
 .hero-banner {
 	#font > .sans-serif(@baseFontSize, 400, @baseLineHeight);
-	background: @slateLight;
-	border: 1px solid @printerLighter;
+	//background: @slateLight;
 	position: relative;
 	padding: 20px;
-	margin-bottom:20px;
+	//margin-bottom:20px;
 	position: relative;
 }
 
-/*
 section#intro {
-	.box-shadow(inset 0px 1px 4px 0px rgba(0,0,0,.2));
+	background: @slateLight;
+	border: 1px solid @printerLighter;
+	margin-bottom:10px;
 }
-*/
 
 section#intro .greeting {
 	text-align: center;
@@ -716,6 +716,7 @@ section#buckets {
 	text-align: center;
 	color: @accentColor;
 	width: 100%;
+	margin-bottom: 10px;
 	//padding-top: 30px;
 }
 
@@ -804,7 +805,7 @@ ul.headshots li img {
 	padding:20px 30px;
 	height:auto;
 	margin-bottom:20px;
-	margin-top:0;
+	margin-top:40px;
 	line-height:15px;
 	color: @black;
 	background:@white;
@@ -1285,9 +1286,17 @@ p.contactlead {
 	background-repeat:no-repeat;
 	height:48px;
 	width:48px;
+	//border: 1px solid transparent;
 	.hide-text();
+	.border-radius(4px);
+	.transition(all 200ms linear);
+	//.box-shadow(inset 0 1px 1px 0 rgba(0,0,0,.2), inset 1px 0px 1px 0 rgba(0,0,0,.2), 0px 0px 2px 0 rgba(0,0,0,.2));
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	&:hover, &:focus, &:active {
 		.hide-text();
+		//border: 1px solid @slateLight;
+		//.box-shadow(inset 0 1px 1px 0 rgba(0,0,0,.2));
+		background-color: @darkPrinter;
 	}
 }
 
