--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -43,7 +43,7 @@ body::after {
 }
 
 header {
-	min-height: 100px;
+	min-height: 80px;
 	vertical-align: middle;
 	padding-right: 20px;
 	padding-left: 20px;
@@ -75,6 +75,8 @@ footer {
 	color: @grayLight;
 	height: 40px;
 	background-color: @bodyBackground;
+	padding-bottom: 20px;
+	padding-top: 20px;
 }
 
 /* Fixed Footer Bottom */
@@ -804,8 +806,7 @@ ul.headshots li img {
 .paper {
 	padding:20px 30px;
 	height:auto;
-	margin-bottom:20px;
-	margin-top:40px;
+	margin: 80px 40px 20px 40px;
 	line-height:15px;
 	color: @black;
 	background:@white;
