--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -627,6 +627,10 @@ a.btn-cta {
     margin: 0px -10px 0px -10px;
     padding: 0px 10px 0px 10px;
   }
+  footer {
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
   header a.brand {
     margin-top: 0px;
   }
@@ -680,6 +684,7 @@ a.btn-cta {
   }
   .paper {
     padding: 20px 10px;
+    margin: 40px 0px 20px 0px;
   }
   a.plus {
     display: block;
