--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1946,6 +1946,10 @@ a.backtotop:hover {
     margin: 0px -10px 0px -10px;
     padding: 0px 10px 0px 10px;
   }
+  footer {
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
   header a.brand {
     margin-top: 0px;
   }
@@ -1999,6 +2003,7 @@ a.backtotop:hover {
   }
   .paper {
     padding: 20px 10px;
+    margin: 40px 0px 20px 0px;
   }
   a.plus {
     display: block;
