--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -32,6 +32,10 @@ header, footer, #page {
 	padding: 0px 10px 0px 10px;
 }
 
+footer {
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
 header a.brand {
 	margin-top: 0px;
 }
@@ -87,6 +91,7 @@ crumb h1 {
 
 .paper {
 	padding: 20px 10px;
+	margin: 40px 0px 20px 0px;
 }
 
 a.plus {
