--- a/assets/css/basic-layout.css
+++ b/assets/css/basic-layout.css
@@ -49,11 +49,13 @@ body {
 #primary-container {
   background-color: transparent;
 }
+/*
 @media (max-width: 767px) {
-  .wrapper {
-    background: #000000 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
-  }
+	.wrapper {
+	background: black url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
+	}
 }
+*/
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
   /* Styles */
   body {
