--- a/assets/less/basic-layout.less
+++ b/assets/less/basic-layout.less
@@ -19,11 +19,13 @@ body {
 	background-color: transparent;
 }
 
+/*
 @media (max-width: 767px) {
 	.wrapper {
 	background: black url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
 	}
 }
+*/
 
 @media 
 only screen and (-webkit-min-device-pixel-ratio : 1.5),
