--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -946,7 +946,7 @@ ul.headshots li img {
 	padding:0 10px;
 	height:auto;
 	margin-bottom:20px;
-	margin-top:0;
+	margin-top:60px;
 	line-height:15px;
 	background:@white;
 	.box-shadow(0px 1px 2px 0px rgba(0,0,0,.2));
@@ -1195,9 +1195,9 @@ section#references {
 }
 
 .portfoliofeature h2 {
-	#font > .title-font(@baseFontSize + 5, 400, @baseLineHeight);
+	#font > .sp-sans-serif(@baseFontSize + 9, 600, @baseLineHeight);
 	text-align: center;
-	color: @printerBlack;
+	color: @dirtyWhite;
 	text-transform: uppercase;
 	padding-top: 30px;
 	padding-bottom: 10px;
@@ -1208,10 +1208,10 @@ section#references {
 }
 
 .portfoliofeature .details .summary {
-	#font > .title-font(@baseFontSize - 1, 400, @baseLineHeight);
+	#font > .sans-serif(@baseFontSize + 5, 400, @baseLineHeight);
 	text-align: center;
-	color: @printerBlack;
-	text-transform: uppercase;
+	color: @dirtyWhite;
+	//text-transform: uppercase;
 	padding: 10px 20px 30px 20px;
 	border-bottom: 1px solid @graySmoke;
 }
