--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -347,14 +347,18 @@ margin-bottom: 10px;
 /* Portfolio Page Styles
 ------------------------------------ */
 
+.canvas, .canvas-banner {
+	margin-top: 20px;
+}
+
 .portfoliofeature h2 {
-	font-size: @baseFontSize;
+	font-size: @baseFontSize + 3;
 	display: block;
 	padding: 20px 10px 5px 10px;
 }
 
 .portfoliofeature .details .summary {
-	font-size: @baseFontSize - 5;
+	font-size: @baseFontSize;
 	display: block;
 	padding: 0px 10px 20px 10px;
 	border-bottom: 1px solid @graySmoke; 
