--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -990,7 +990,7 @@ ul.headshots li img {
   padding: 0 10px;
   height: auto;
   margin-bottom: 20px;
-  margin-top: 0;
+  margin-top: 60px;
   line-height: 15px;
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
@@ -1215,12 +1215,12 @@ section#references {
   text-align: center;
 }
 .portfoliofeature h2 {
-  font-family: "lint-mccree", 'proxima-nova', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 20px;
-  font-weight: 400;
+  font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  font-weight: 600;
   line-height: 20px;
   text-align: center;
-  color: #2b2b2b;
+  color: #9a9795;
   text-transform: uppercase;
   padding-top: 30px;
   padding-bottom: 10px;
@@ -1229,13 +1229,12 @@ section#references {
   padding-bottom: 30px;
 }
 .portfoliofeature .details .summary {
-  font-family: "lint-mccree", 'proxima-nova', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-family: 'proxima-nova', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 20px;
   font-weight: 400;
   line-height: 20px;
   text-align: center;
-  color: #2b2b2b;
-  text-transform: uppercase;
+  color: #9a9795;
   padding: 10px 20px 30px 20px;
   border-bottom: 1px solid #f5f5f5;
 }
@@ -1722,13 +1721,17 @@ p.contactlead {
   }
   /* Portfolio Page Styles
   ------------------------------------ */
+  .canvas,
+  .canvas-banner {
+    margin-top: 20px;
+  }
   .portfoliofeature h2 {
-    font-size: 15px;
+    font-size: 18px;
     display: block;
     padding: 20px 10px 5px 10px;
   }
   .portfoliofeature .details .summary {
-    font-size: 10px;
+    font-size: 15px;
     display: block;
     padding: 0px 10px 20px 10px;
     border-bottom: 1px solid #f5f5f5;
