--- a/assets/less/basic-layout.less
+++ b/assets/less/basic-layout.less
@@ -1,45 +1,29 @@
 // Core variables and mixins
 @import "values.less"; // Modify this for custom colors, font-sizes, etc
 @import "mix.less";
-body {
-		background: #612816 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
-		overflow-y: visible;
-	}
-	
-#viewport, #page, .push {
-	background-color: transparent;
+
+body, #viewport, #page,.wrapper, .push {
+	background: #612816 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
+	overflow-y: visible;
 }
 
 .wrapper {
 	background: transparent url("/assets/img/bg-lighting@1x.jpg") repeat-x;
-	overflow-y: visible;
+	//.backface-visibility(hidden);
 }
 
-#primary-container {
-	background-color: transparent;
-}
-
-/*
 @media (max-width: 767px) {
 	.wrapper {
 	background: black url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
 	}
 }
-*/
 
 @media 
 only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
 /* Styles */
-body {
-		background: url("/assets/img/bg2-wood@2x.jpg") repeat;
-		background-size: 203px 317px;
-	}
-	
-.wrapper {
-	background: url("/assets/img/bg-lighting@2x.jpg") repeat-x;
+body, #viewport, #page,.wrapper, .push {
+	background: #612816 url("/assets/img/bg2-wood@1x.jpg") repeat 0 0;
 	background-size: 512px 511px;
-}
-
-
+	}
 }
